formando a estruturá inicial

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
         </title>
     </head>
     <body>
-        
+        <h1>falando sobre html</h1>
+            <ul>
+                <li><strong><i>Principais tags</i></strong></li>
+                <li><strong><i>alguns atributos</i></strong></li>
+                <li><strong><i>tags extras</i></strong></li>
+                <li><strong><i>referencias: </i></strong></li>
+
+            </ul>
     </body>
 </html>
